Fix error "Prefer java.nio.file.Path.of(java.lang.String,java.lang.String...)" Update "testGetContentType()" method in "org.springframework.context.support.AivisSpeechRestApiJPanelTest" class